--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,49 @@ body {
     margin: 0;
     padding: 0;
 }
-h1 {
-    text-align: center;
+
+a:visited {
+    color: black;
 }
-.header{
+
+a {
+    color: black;
+}
+
+a:hover {
+    color: gray;
+}
+
+
+.header {
     background-color: #f0f0f0;
-    padding: 20px;
-    text-align: center;
+    padding:20px;
+    text-align: left;
+    display: flex;      
+    flex-direction: column;   /* Keep name + title on top */
 }
-.content{ 
+
+.header-links {
+    display: flex;           
+    gap: 30px;               /* Space between Github / LinkedIn / TryHackMe */
+}
+.content {
     margin: 20px;
-    text-align:left;
-    padding-left:150px;
+    text-align: left;
+
 }
+.nav {
+    margin: 20px;
+    text-align: left;
+    display:flex;
+    gap:40px;
+}
+.nav a {
+    text-decoration: none;
+    font-weight: bold;
+    font-style:italic;
+}
+
+
 
 /* . = style a class , # = style an id, (h1,p, etc) = style element*/
